--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.fanny.bmb"
         minSdkVersion 19
@@ -33,14 +34,10 @@ dependencies {
     compile project(':boommenu')
     compile project(':spacelib')
     compile project(':CircleMenulibrary')
-    compile project(':infinitecycleviewpager')
     compile project(':stepview')
-
-
-
-
-
-    compile 'com.android.support:appcompat-v7:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    //Optional compile for GCM (Google Cloud Messaging).
+    compile 'com.github.devlight:infinitecycleviewpager:1.0.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha8'
     compile 'com.github.armcha:SpaceNavigationView:1.6.0'
     compile 'com.github.imangazalievm:circlemenu:1.0.3'
@@ -53,5 +50,8 @@ dependencies {
     compile 'com.android.support:design:25.1.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.sd6352051.niftydialogeffects:niftydialogeffects:1.0.0@aar'
+    compile 'cn.bmob.android:bmob-sdk:3.5.5'
+    compile 'com.google.android.gms:play-services-gcm:9.4.0'
+    compile 'com.hyphenate:hyphenate-sdk:3.3.0'
     testCompile 'junit:junit:4.12'
 }
