--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
 
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
@@ -19,7 +20,10 @@ allprojects {
     repositories {
         jcenter()
         maven { url "https://jitpack.io" }
-
+        /**
+         * bmob云后台仓库
+         */
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
 
     }
 }
