--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':boommenu', ':spacelib', ':CircleMenulibrary', ':infinitecycleviewpager', ':stepview'
+include ':app', ':boommenu', ':spacelib', ':CircleMenulibrary', ':stepview'
